# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 2.0 ==
  * Update the portal's CSS (#717)
  * Add Google Analytics functionality (#718)
  * Make button-like things be buttons (#175)
  * Create interactive map of resources (#28)
  * Fix Slice/Project Membership functionality according to feedback (#496)
  * Enable VERIFYHOST in put_message (#660)
  * Add script to add an arbitrary attribute to a user (#701)

== 1.9.6 ==
  * Add ExoGENI FIU and UH racks to service registry (#714)

== 1.9.5 ==
  * slice expiration shouldn't pick a date past project expiration (#614)
  * Fix tracebacks in omni_php.py when creating a sliver fails (#649,#321)
  * wimax-enable.php should not check for certificates (#689)
  * Undefined variable in tool-expired-projects (#687)
  * pgch logs something with each CH call (#697)

== 1.9.4 ==
  * Log when someone tries to download their outside cert (#699)

== 1.9.3 ==
  * Re-enable pgch threading with fixes (#690)

== 1.9.2 ==
  * Disable pgch threading until it works (#690)

== 1.9.1 ==
  * GMOC reporting fix (#688)

== 1.9 ==
  * load balancing pgch (#650)
  * WiMAX integration (#484)
  * Extend default and max slice expiration (#636)
  * Verify OpenID username (#289)
  * Improve OpenID page flow (#288)
  * Fix call(s) to modify_project_membership in pa_client.php (#665)
  * Move cainfo.html (#642)
  * Fix OpenID for GIMI (#661)
  * Add pa_project_attribute table (#656)
  * Allow for download public SSH key (#655)
  * undefined variables in amstatus with am_id (#648)
  * Login information is wrong in multi-user slices (#645)
  * Save error Omni results (#444)
  * Fix sa_url in tool-omniconfig.php (#643)
  * Fix warnings in gemini.php (#641)
  * Fix link to SignMeUp (#653)
  * Include email address in account change request emails (#626)
  * Check permissions and remove dead code in do-edit-project (#666)
  * SA/PA merge including... (#540)