@@ -3,6 +3,7 @@
 = GENI Clearinghouse and Portal Release Notes =
 
 == 2.0 ==
+  * Create GENI resource map for monitor display (#734)
   * Update the portal's CSS (#717)
   * Add Google Analytics functionality (#718)
   * Make button-like things be buttons (#175)
